--- a/reports/01_data_report.qmd
+++ b/reports/01_data_report.qmd
@@ -55,21 +55,21 @@ The dataset excluded songs shorter than 30 seconds (most likely interludes; 994 
 ### MusicBrainz network data
 
 ```{r musibrainz_genres}
-get_unique_tags_from_taglist <- function(mb_tags) {
-  do.call(rbind, lapply(mb_tags, function(frame) frame['tag_name'])) |> 
+get_unique_tags_from_taglist <- function(tags) {
+  do.call(rbind, lapply(tags, function(frame) frame['tag_name'])) |> 
     dplyr::pull(tag_name) |> 
     unique()
 }
 
-poptrag_filtered_mb_genres <- readRDS('../data/poptrag_filtered_mb_genre.rds')
-mb_tags <- readRDS('../data/mb_tags.rds')
+poptrag_filtered_mb_genres <- readRDS('../data/filtered_mb.rds')
+mb_long <- readRDS('../data/filtered_mb_long.rds')
 mb_non_music_tags <- readRDS('../data/mb_non_music_tags.rds')
 
 n_diff_mb <- n_poptrag - nrow(poptrag_filtered_mb_genres)
-n_unique_mb_tags <- get_unique_tags_from_mb_taglist(mb_tags$mb.genres) |> length()
+n_unique_mb_tags <- get_unique_tags_from_taglist(mb_long$mb.genres) |> length()
 
-tags_per_track_mb <- dplyr::count(mb_tags, track.s.id) |> dplyr::pull(n)
-votes_per_track_mb <- mb_tags |> 
+tags_per_track_mb <- dplyr::count(mb_long, track.s.id) |> dplyr::pull(n)
+votes_per_track_mb <- mb_long |> 
   dplyr::group_by(track.s.id) |> 
   dplyr::summarize(n_votes = sum(tag_count)) |> 
   dplyr::ungroup() |> 
@@ -80,29 +80,27 @@ We filtered out all songs without a genre tag or with only non-music genre tags 
 
 This amounts to **N~MusicBrainz~ = `r format(nrow(poptrag_filtered_mb_genres), big.mark = ',')` tracks** with MusicBrainz music genre tags.
 
-There were `r format(n_unique_mb_tags, big.mark = ',')` different genre tags in the MusicBrainz genre data set. Users assigned between `r min(tags_per_track_mb)` and `r max(tags_per_track_mb)` different tags to each track (median: `r median(tags_per_track_mb)`, IQR: `r IQR(tags_per_track_mb)`) and voted for each track between `r min(votes_per_track_mb)` and `r max(votes_per_track_mb)` times (median: `r median(votes_per_track_mb)`, IQR: `r IQR(votes_per_track_mb)`).
+There are `r format(n_unique_mb_tags, big.mark = ',')` different genre tags in the MusicBrainz genre data set. Users assigned between `r min(tags_per_track_mb)` and `r max(tags_per_track_mb)` different tags to each track (median: `r median(tags_per_track_mb)`, IQR: `r IQR(tags_per_track_mb)`) and voted for each track between `r min(votes_per_track_mb)` and `r max(votes_per_track_mb)` times (median: `r median(votes_per_track_mb)`, IQR: `r IQR(votes_per_track_mb)`).
 
 ### Discogs network data
 
 ```{r discogs_genres}
-poptrag_filtered_discogs_genres <- readRDS('../data/poptrag_filtered_discogs_genre.rds')
-discogs_tags <- readRDS('../data/discogs_tags.rds')
+poptrag_filtered_dc_genres <- readRDS('../data/filtered_dc.rds')
+dc_long <- readRDS('../data/filtered_dc_long.rds')
 dc_non_music_tags <- readRDS('../data/dc_non_music_tags.rds')
 
-n_diff_dc <- n_poptrag - nrow(poptrag_filtered_mb_genres)
-n_unique_dc_tags <- get_unique_tags_from_mb_taglist(mb_tags$mb.genres) |> leng
+n_diff_dc <- n_poptrag - nrow(poptrag_filtered_dc_genres)
+n_unique_dc_tags <- get_unique_tags_from_taglist(dc_long$dc.genres) |> length()
 
-tags_per_track_dc <- dplyr::count(dc_tags, track.s.id) |> dplyr::pull(n)
-votes_per_track_dc <- dc_tags |> 
-  dplyr::group_by(track.s.id) |> 
-  dplyr::summarize(n_votes = sum(tag_count)) |> 
-  dplyr::ungroup() |> 
-  dplyr::pull(n_votes)
+tags_per_track_dc <- dplyr::count(dc_long, track.s.id) |> dplyr::pull(n)
 ```
 
-We filtered out all songs without a genre or style tag or with only non-music genre tags or style on Discogs (`r format(n_diff_dc, big.mark = ',')` tracks, `r round(n_diff_dc / n_poptrag, 1)`%). Non-music genre tags were: `r paste(sprintf('"%s"', dc_non_music_tags), collapse = ', ')`.
+We filtered out all songs without a Discogs genre tag (Discogs "genre" and/or "style") or with only non-music genre tags (`r format(n_diff_dc, big.mark = ',')` tracks, `r round(n_diff_dc / n_poptrag, 1)`%). Non-music genre tags were: `r paste(sprintf('"%s"', dc_non_music_tags), collapse = ', ')`.
 
 This amounts to **N~Discogs~ = `r format(nrow(poptrag_filtered_dc_genres), big.mark = ',')` tracks** with Discogs music genre tags.
 
-There were `r format(n_unique_dc_tags, big.mark = ',')` different genre tags in the MusicBrainz genre data set. Users assigned between `r min(tags_per_track_dc)` and `r max(tags_per_track_dc)` different tags to each track (median: `r median(tags_per_track_dc)`, IQR: `r IQR(tags_per_track_dc)`) and voted for each track between `r min(votes_per_track_dc)` and `r max(votes_per_track_dc)` times (median: `r median(votes_per_track_dc)`, IQR: `r IQR(votes_per_track_dc)`).
+There are `r format(n_unique_dc_tags, big.mark = ',')` different genre tags in the Discogs genre data set. Users assigned between `r min(tags_per_track_dc)` and `r max(tags_per_track_dc)` different tags to each track (median: `r median(tags_per_track_dc)`, IQR: `r IQR(tags_per_track_dc)`).
 
+:::{.callout-note}
+All votes for tags per track were set to 1 for the Discgos data set, as Discogs does not provide the number of votes per tag.
+:::
