--- a/inst/02_genre_trees.qmd
+++ b/inst/02_genre_trees.qmd
@@ -15,6 +15,19 @@ format:
         code-links:
         - text: Github Repository
           href: "https://github.com/markusradke/GenreDiscourseAnalysis"
+        css: |
+          .interactive-plot {
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            overflow: auto;
+            max-height: 1200px;
+            background-color: #fafafa;
+          }
+          .plot-container {
+            width: 100%;
+            height: 1200px;
+            overflow: auto;
+          }
 ---
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE, message = FALSE, warning = FALSE)
@@ -24,29 +37,69 @@ devtools::load_all()
 # Short Explanation
 include graphics from the Bayreuth Powerpoint
 
-# Genre Tree for Discogs
-include foldable hmtl depiction
 
-# Genre Tree for Musicbrainz
+# Genre Tree for MusicBrainz
 Only here with votes
 
-# Genre Tree for Spotify
 :::{.column-screen}
-```{r, include=FALSE}	
+```{r musicbrainz-interactive-tree, echo=FALSE}
+mb_initial <- read_feather_with_lists("../models/initial_genres_mb.feather")
+mb_graph <- readRDS("../models/MusicBrainz_graph.rds")
+
+plot_network_graph(
+  mb_graph,
+  mb_initial,
+  height = 2000,
+  interactive = TRUE,
+  minFontSize = 12,
+  maxFontSize = 12,  # Fixed font size as requested
+  sizemode = "initial_genre",
+  sortmode = "size",
+  fillmode = "none"
+) 
+
+```
+:::
+
+# Genre Tree for Discogs
+:::{.column-screen}
+```{r discogs-interactive-tree, echo=FALSE}
+dc_initial <- read_feather_with_lists("../models/initial_genres_dc.feather")
+dc_graph <- readRDS("../models/Discogs_graph.rds")
+
+plot_network_graph(
+  dc_graph,
+  dc_initial,
+  height = 2000,
+  interactive = TRUE,
+  minFontSize = 12,
+  maxFontSize = 12,  # Fixed font size as requested
+  sizemode = "initial_genre",
+  sortmode = "size",
+  fillmode = "none"
+)
+```
+:::
+
+# Genre Tree for Spotify
+Please click on the nodes to explore sub-genres. The font size is fixed to ensure readability. Node size represents the number of songs in each genre.
+
+:::{.column-screen}
+```{r spotify-interactive-tree, echo=FALSE}	
 s_initial <- read_feather_with_lists("../models/initial_genres_s.feather")
 s_graph <- readRDS("../models/Spotify_graph.rds")
-
-
 
 plot_network_graph(
   s_graph,
   s_initial,
-  height = 130000,
-  minFontSize = 10,
-  maxFontSize = 28,
+  height = 1200,
+  interactive = TRUE,
+  minFontSize = 12,
+  maxFontSize = 12,  # Fixed font size as requested
   sizemode = "initial_genre",
   sortmode = "size",
   fillmode = "none"
 ) 
 ```
+
 :::
